// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`root > when add is given > prints the usage when --help is passed 1`] = `
"Add models, fields, actions, routes and environments to your app

This command first performs a sync to ensure that your local and environment directories
match, changes are tracked since last sync. If any conflicts are detected, they must be
resolved before adding.

USAGE
  ggt add <resource> [args...] [flags]

COMMANDS
  model          Add a new model
  action         Add a new action
  route          Add a new route
  field          Add a field to a model
  environment    Clone an environment

FLAGS

  -a, --app <name>               Select the application

  -e, --env <environment>        Select the environment

      --allow-different-app
    Syncs with a different app using the --app flag, instead of the most recently synced one in the current directory.

      --allow-unknown-directory
    Syncs to any local directory with existing files, even if the directory hasn't been synced before.

EXAMPLES
  $ ggt add model post title:string body:string
  $ ggt add field post/published:boolean
  $ ggt add action model/post/publish
  $ ggt add action action/audit
  $ ggt add route GET howdy
  $ ggt add environment staging --environment development

RESOURCE SYNTAX
  ggt add model <model_name> [field_name:field_type ...]

  ggt add action [CONTEXT]/<action_name>
  CONTEXT: Specifies the kind of action. Use "model" for model actions otherwise use "action".

  ggt add route <HTTP_METHOD> <route_path>

  ggt add field <model_path>/<field_name>:<field_type>
"
`;

exports[`root > when add is given > prints the usage when -h is passed 1`] = `
"Add models, fields, actions, routes and environments to your app

USAGE
  ggt add <resource> [args...] [flags]

COMMANDS
  model          Add a new model
  action         Add a new action
  route          Add a new route
  field          Add a field to a model
  environment    Clone an environment

FLAGS
  -a, --app <name>               Select the application
  -e, --env <environment>        Select the environment
      --allow-different-app      Allow syncing a different app than the one in sync.json
      --allow-unknown-directory  Allow syncing an unrecognized directory

EXAMPLES
  $ ggt add model post title:string body:string
  $ ggt add field post/published:boolean
  $ ggt add action model/post/publish
  $ ggt add action action/audit
  $ ggt add route GET howdy
  $ ggt add environment staging --environment development

Run "ggt add --help" for more information.
"
`;

exports[`root > when agent-plugin is given > prints the usage when --help is passed 1`] = `
"Install Gadget agent plugins (AGENTS.md + skills)

USAGE
  ggt agent-plugin [flags]

COMMANDS
  install    Install Gadget agent plugins into the current project

FLAGS
      --force             Overwrite/reinstall even if already present

EXAMPLES
  $ ggt agent-plugin install
  $ ggt agent-plugin install --force
"
`;

exports[`root > when agent-plugin is given > prints the usage when -h is passed 1`] = `
"Install Gadget agent plugins (AGENTS.md + skills)

USAGE
  ggt agent-plugin [flags]

COMMANDS
  install    Install Gadget agent plugins into the current project

FLAGS
      --force             Overwrite/reinstall even if already present

EXAMPLES
  $ ggt agent-plugin install
  $ ggt agent-plugin install --force

Run "ggt agent-plugin --help" for more information.
"
`;

exports[`root > when configure is given > prints the usage when --help is passed 1`] = `
"Configure default execution options

Make changes to the configured defaults. This allows you to set an option on every ggt command by default without
needing to set a flag on every command.

USAGE
  ggt configure

COMMANDS
  show      Show current configuration
  change    Change configuration options
  clear     Clear all configured defaults

EXAMPLES
  $ ggt configure show
  $ ggt configure change
  $ ggt configure clear
"
`;

exports[`root > when configure is given > prints the usage when -h is passed 1`] = `
"Configure default execution options

USAGE
  ggt configure

COMMANDS
  show      Show current configuration
  change    Change configuration options
  clear     Clear all configured defaults

EXAMPLES
  $ ggt configure show
  $ ggt configure change
  $ ggt configure clear

Run "ggt configure --help" for more information.
"
`;

exports[`root > when debugger is given > prints the usage when --help is passed 1`] = `
"Connect to the debugger for your environment

Start a Chrome DevTools Protocol proxy server that connects to the Gadget debugger.
This allows you to debug your Gadget app using VS Code, Chrome DevTools, or any other
CDP-compatible debugger client.

DIRECTORY is the directory containing your Gadget app (default: the current directory).

Use --configure with one of: vscode, cursor to set up editor integration.

USAGE
  ggt debugger [DIRECTORY] [flags]

ARGUMENTS
  DIRECTORY    The directory containing your Gadget app (default: ".")

FLAGS
  -a, --app <name>          Select the application
  -e, --env <environment>   Select the environment
  -ll, --log-level <level>  Set the log level
      --my-logs             Show only my logs
  -p, --port <port>         Port for the debugger
      --configure <editor>  Configure the debugger for an editor

EXAMPLES
  $ ggt debugger
  $ ggt debugger --port 9230
  $ ggt debugger --app myApp --env development
  $ ggt debugger --configure vscode
"
`;

exports[`root > when debugger is given > prints the usage when -h is passed 1`] = `
"Connect to the debugger for your environment

USAGE
  ggt debugger [DIRECTORY] [flags]

ARGUMENTS
  DIRECTORY    The directory containing your Gadget app (default: ".")

FLAGS
  -a, --app <name>          Select the application
  -e, --env <environment>   Select the environment
  -ll, --log-level <level>  Set the log level
      --my-logs             Show only my logs
  -p, --port <port>         Port for the debugger
      --configure <editor>  Configure the debugger for an editor

EXAMPLES
  $ ggt debugger
  $ ggt debugger --port 9230
  $ ggt debugger --app myApp --env development
  $ ggt debugger --configure vscode

Run "ggt debugger --help" for more information.
"
`;

exports[`root > when deploy is given > prints the usage when --help is passed 1`] = `
"Deploy your environment to production

Deploys your app to production.

This command first performs a sync to ensure that your local and environment directories
match, changes are tracked since last sync. If any conflicts are detected, they must be
resolved before deployment.

USAGE
  ggt deploy [flags]

FLAGS

  -a, --app <name>               Select the application

  -e, --env <environment>        Select the environment

      --allow-different-app
    Syncs with a different app using the --app flag, instead of the most recently synced one in the current directory.

      --allow-unknown-directory
    Syncs to any local directory with existing files, even if the directory hasn't been synced before.

  -f, --force
    Forces a push by discarding any changes made on your environment directory since last sync.

      --allow-problems
    Deploys despite any existing issues found in the app (Gelly errors, TypeScript errors, etc.).

      --allow-charges
    Deploys even if it results in additional charges to your plan.

      --allow-data-delete
    Deploys even if it results in the deletion of data in production.

EXAMPLES
  $ ggt deploy -a myBlog --from staging
"
`;

exports[`root > when deploy is given > prints the usage when -h is passed 1`] = `
"Deploy your environment to production

USAGE
  ggt deploy [flags]

FLAGS
  -a, --app <name>               Select the application
  -e, --env <environment>        Select the environment
      --allow-different-app      Allow syncing a different app than the one in sync.json
      --allow-unknown-directory  Allow syncing an unrecognized directory
  -f, --force                    Discard conflicting changes
      --allow-problems           Deploy even with problems
      --allow-charges            Deploy even with new charges
      --allow-data-delete        Deploy even with data loss

EXAMPLES
  $ ggt deploy -a myBlog --from staging

Run "ggt deploy --help" for more information.
"
`;

exports[`root > when dev is given > prints the usage when --help is passed 1`] = `
"Start developing your application

Clones your Gadget environment's files to your local machine and keeps it in sync, in order to
enable local development with your text editor and source code with Git.

DIRECTORY is the local directory to sync files to (default: the current directory).

If your app's local directory already exists, this command first performs a sync to ensure
that your local and environment directories match, changes are tracked since last sync. If any
conflicts are detected, they must be resolved before development starts.

USAGE
  ggt dev [DIRECTORY] [flags]

ARGUMENTS

  DIRECTORY
    The local directory to sync files to. The directory will
    be created if it does not exist.

    Defaults to the current working directory.

FLAGS

  -a, --app <name>                      Select the application

  -e, --env <environment>               Select the environment

      --allow-different-app
    Syncs with a different app using the --app flag, instead of the most recently synced one in the current directory.

      --allow-unknown-directory
    Syncs to any local directory with existing files, even if the directory hasn't been synced before.

  -ll, --log-level <level>              Set the log level

      --my-logs                         Show only my logs

      --prefer <source>
    Auto-select changes from the given source on conflict. Use 'local' to keep your local changes or 'environment' to keep remote changes.

      --file-push-delay <ms>            Delay in ms before pushing file changes

      --file-watch-debounce <ms>        Debounce in ms for file watch events

      --file-watch-poll-interval <ms>   Interval in ms for polling file changes

      --file-watch-poll-timeout <ms>    Timeout in ms for file watch polling

      --file-watch-rename-timeout <ms>  Timeout in ms for detecting file renames

      --no-logs                         Disable log streaming during dev

EXAMPLES
  $ ggt dev ~/myGadgetApps/myBlog --app myBlogApp
  $ ggt dev --env main --prefer local
  $ ggt dev ~/gadget/example --app=example --env=development --prefer=local

IGNORING FILES
  ggt dev uses a .ignore file, similar to .gitignore, to exclude specific files and
  folders from syncing. These files are always ignored:

    • .DS_Store
    • .gadget
    • .git
    • node_modules
    • .shopify

NOTES
  • "ggt dev" only works with development environments
  • "ggt dev" only supports "yarn" v1 for installing dependencies
  • Avoid deleting or moving all of your files while "ggt dev" is running
"
`;

exports[`root > when dev is given > prints the usage when -h is passed 1`] = `
"Start developing your application

USAGE
  ggt dev [DIRECTORY] [flags]

ARGUMENTS
  DIRECTORY    The local directory to sync files to (default: ".")

FLAGS
  -a, --app <name>                      Select the application
  -e, --env <environment>               Select the environment
      --allow-different-app             Allow syncing a different app than the one in sync.json
      --allow-unknown-directory         Allow syncing an unrecognized directory
  -ll, --log-level <level>              Set the log level
      --my-logs                         Show only my logs
      --prefer <source>                 Conflict resolution preference (local or environment)
      --file-push-delay <ms>            Delay in ms before pushing file changes
      --file-watch-debounce <ms>        Debounce in ms for file watch events
      --file-watch-poll-interval <ms>   Interval in ms for polling file changes
      --file-watch-poll-timeout <ms>    Timeout in ms for file watch polling
      --file-watch-rename-timeout <ms>  Timeout in ms for detecting file renames
      --no-logs                         Disable log streaming during dev

EXAMPLES
  $ ggt dev ~/myGadgetApps/myBlog --app myBlogApp
  $ ggt dev --env main --prefer local
  $ ggt dev ~/gadget/example --app=example --env=development --prefer=local

Run "ggt dev --help" for more information.
"
`;

exports[`root > when env is given > prints the usage when --help is passed 1`] = `
"Manage environments

USAGE
  ggt env <command> [flags]

COMMANDS
  list       List all environments
  create     Create a new environment
  delete     Delete an environment
  unpause    Unpause a paused environment
  use        Switch the active environment

FLAGS
  -a, --app <name>        Select the application

EXAMPLES
  $ ggt env list --app=myapp
  $ ggt env create staging --app=myapp
  $ ggt env delete staging --force --app=myapp
  $ ggt env use staging
"
`;

exports[`root > when env is given > prints the usage when -h is passed 1`] = `
"Manage environments

USAGE
  ggt env <command> [flags]

COMMANDS
  list       List all environments
  create     Create a new environment
  delete     Delete an environment
  unpause    Unpause a paused environment
  use        Switch the active environment

FLAGS
  -a, --app <name>        Select the application

EXAMPLES
  $ ggt env list --app=myapp
  $ ggt env create staging --app=myapp
  $ ggt env delete staging --force --app=myapp
  $ ggt env use staging

Run "ggt env --help" for more information.
"
`;

exports[`root > when eval is given > prints the usage when --help is passed 1`] = `
"Evaluate a JavaScript snippet against your app's API

The snippet receives an api variable (a pre-constructed Gadget API client
authenticated as the developer). Results are formatted like Node.js REPL output.
Writes are disallowed by default; use --allow-writes to enable them.

USAGE
  ggt eval <snippet> [flags]

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment
  -w, --allow-writes       Allow write operations in eval

EXAMPLES
  $ ggt eval 'api.user.findMany()'
  $ ggt eval --app my-app --env staging 'api.user.findFirst()'
  $ ggt eval -w 'api.user.delete("123")'
"
`;

exports[`root > when eval is given > prints the usage when -h is passed 1`] = `
"Evaluate a JavaScript snippet against your app's API

USAGE
  ggt eval <snippet> [flags]

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment
  -w, --allow-writes       Allow write operations in eval

EXAMPLES
  $ ggt eval 'api.user.findMany()'
  $ ggt eval --app my-app --env staging 'api.user.findFirst()'
  $ ggt eval -w 'api.user.delete("123")'

Run "ggt eval --help" for more information.
"
`;

exports[`root > when list is given > prints the usage when --help is passed 1`] = `
"List your available applications

USAGE
  ggt list

EXAMPLES
  $ ggt list
"
`;

exports[`root > when list is given > prints the usage when -h is passed 1`] = `
"List your available applications

USAGE
  ggt list

EXAMPLES
  $ ggt list

Run "ggt list --help" for more information.
"
`;

exports[`root > when login is given > prints the usage when --help is passed 1`] = `
"Log in to your account

USAGE
  ggt login

EXAMPLES
  $ ggt login
"
`;

exports[`root > when login is given > prints the usage when -h is passed 1`] = `
"Log in to your account

USAGE
  ggt login

EXAMPLES
  $ ggt login

Run "ggt login --help" for more information.
"
`;

exports[`root > when logout is given > prints the usage when --help is passed 1`] = `
"Log out of your account

USAGE
  ggt logout

EXAMPLES
  $ ggt logout
"
`;

exports[`root > when logout is given > prints the usage when -h is passed 1`] = `
"Log out of your account

USAGE
  ggt logout

EXAMPLES
  $ ggt logout

Run "ggt logout --help" for more information.
"
`;

exports[`root > when logs is given > prints the usage when --help is passed 1`] = `
"Stream your environment's logs

Use the root --json flag to output logs in machine-readable JSON format.

USAGE
  ggt logs [flags]

FLAGS
  -a, --app <name>          Select the application
  -e, --env <environment>   Select the environment
  -ll, --log-level <level>  Set the log level
      --my-logs             Show only my logs

EXAMPLES
  $ ggt logs --env development --my-logs
  $ ggt logs --env production --json
"
`;

exports[`root > when logs is given > prints the usage when -h is passed 1`] = `
"Stream your environment's logs

USAGE
  ggt logs [flags]

FLAGS
  -a, --app <name>          Select the application
  -e, --env <environment>   Select the environment
  -ll, --log-level <level>  Set the log level
      --my-logs             Show only my logs

EXAMPLES
  $ ggt logs --env development --my-logs
  $ ggt logs --env production --json

Run "ggt logs --help" for more information.
"
`;

exports[`root > when open is given > prints the usage when --help is passed 1`] = `
"Open a Gadget location in your browser

This command opens a specific Gadget page in your browser, allowing you to directly access
various parts of your application's interface such as logs, permissions, data views, or
schemas.

USAGE
  ggt open [LOCATION] [model_name] [flags]

ARGUMENTS
  LOCATION      The part of Gadget to open (logs, permissions, data, schema)
  model_name    The model name (for data and schema locations)

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment
      --show-all           Show all available locations

EXAMPLES
  $ ggt open
  $ ggt open logs
  $ ggt open permissions
  $ ggt open data post
  $ ggt open schema post
  $ ggt open data --show-all
  $ ggt open schema --show-all
  $ ggt open data post --app myBlog --env staging

LOCATIONS
  LOCATION specifies the part of Gadget to open. By default it opens the app's home page:

    logs          Opens logs
    permissions   Opens permissions
    data          Opens data editor for a specific model
    schema        Opens schema editor for a specific model
"
`;

exports[`root > when open is given > prints the usage when -h is passed 1`] = `
"Open a Gadget location in your browser

USAGE
  ggt open [LOCATION] [model_name] [flags]

ARGUMENTS
  LOCATION      The part of Gadget to open (logs, permissions, data, schema)
  model_name    The model name (for data and schema locations)

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment
      --show-all           Show all available locations

EXAMPLES
  $ ggt open
  $ ggt open logs
  $ ggt open permissions
  $ ggt open data post
  $ ggt open schema post
  $ ggt open data --show-all
  $ ggt open schema --show-all
  $ ggt open data post --app myBlog --env staging

Run "ggt open --help" for more information.
"
`;

exports[`root > when problems is given > prints the usage when --help is passed 1`] = `
"Show problems (errors, warnings) in your application

USAGE
  ggt problems [flags]

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment

EXAMPLES
  $ ggt problems
"
`;

exports[`root > when problems is given > prints the usage when -h is passed 1`] = `
"Show problems (errors, warnings) in your application

USAGE
  ggt problems [flags]

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment

EXAMPLES
  $ ggt problems

Run "ggt problems --help" for more information.
"
`;

exports[`root > when pull is given > prints the usage when --help is passed 1`] = `
"Pull your environment's files to your local computer

Pulls your environment files to your local directory.

This command first tracks changes in your local directory since the last sync. If changes are
detected, you will be prompted to discard them or abort the pull.

USAGE
  ggt pull [flags]

FLAGS

  -a, --app <name>               Select the application

  -e, --env <environment>        Select the environment

      --allow-different-app
    Syncs with a different app using the --app flag, instead of the most recently synced one in the current directory.

      --allow-unknown-directory
    Syncs to any local directory with existing files, even if the directory hasn't been synced before.

  -f, --force
    Forces a pull by discarding any changes made on your local directory since last sync.

EXAMPLES
  $ ggt pull --env development --force
"
`;

exports[`root > when pull is given > prints the usage when -h is passed 1`] = `
"Pull your environment's files to your local computer

USAGE
  ggt pull [flags]

FLAGS
  -a, --app <name>               Select the application
  -e, --env <environment>        Select the environment
      --allow-different-app      Allow syncing a different app than the one in sync.json
      --allow-unknown-directory  Allow syncing an unrecognized directory
  -f, --force                    Discard conflicting changes

EXAMPLES
  $ ggt pull --env development --force

Run "ggt pull --help" for more information.
"
`;

exports[`root > when push is given > prints the usage when --help is passed 1`] = `
"Push your local files to your environment

Pushes your local files to your environment directory.

This command first tracks changes in your environment directory since the last sync.
If changes are detected, you will be prompted to discard them or abort the push.

USAGE
  ggt push [flags]

FLAGS

  -a, --app <name>               Select the application

  -e, --env <environment>        Select the environment

      --allow-different-app
    Syncs with a different app using the --app flag, instead of the most recently synced one in the current directory.

      --allow-unknown-directory
    Syncs to any local directory with existing files, even if the directory hasn't been synced before.

  -f, --force
    Forces a push by discarding any changes made on your environment directory since last sync.

EXAMPLES
  $ ggt push --env main --force
"
`;

exports[`root > when push is given > prints the usage when -h is passed 1`] = `
"Push your local files to your environment

USAGE
  ggt push [flags]

FLAGS
  -a, --app <name>               Select the application
  -e, --env <environment>        Select the environment
      --allow-different-app      Allow syncing a different app than the one in sync.json
      --allow-unknown-directory  Allow syncing an unrecognized directory
  -f, --force                    Discard conflicting changes

EXAMPLES
  $ ggt push --env main --force

Run "ggt push --help" for more information.
"
`;

exports[`root > when status is given > prints the usage when --help is passed 1`] = `
"Show file changes since last sync (dev, push, deploy, etc.)

USAGE
  ggt status [flags]

FLAGS

  -a, --app <name>               Select the application

  -e, --env <environment>        Select the environment

      --allow-different-app
    Syncs with a different app using the --app flag, instead of the most recently synced one in the current directory.

      --allow-unknown-directory
    Syncs to any local directory with existing files, even if the directory hasn't been synced before.

EXAMPLES
  $ ggt status
"
`;

exports[`root > when status is given > prints the usage when -h is passed 1`] = `
"Show file changes since last sync (dev, push, deploy, etc.)

USAGE
  ggt status [flags]

FLAGS
  -a, --app <name>               Select the application
  -e, --env <environment>        Select the environment
      --allow-different-app      Allow syncing a different app than the one in sync.json
      --allow-unknown-directory  Allow syncing an unrecognized directory

EXAMPLES
  $ ggt status

Run "ggt status --help" for more information.
"
`;

exports[`root > when var is given > prints the usage when --help is passed 1`] = `
"Manage environment variables

USAGE
  ggt var <command> [flags]

COMMANDS
  list      List all environment variables
  get       Get the value of an environment variable
  set       Set one or more environment variables
  delete    Delete one or more environment variables
  import    Import environment variables from another environment or file

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment

EXAMPLES
  $ ggt var list --app=my-app --env=development
  $ ggt var set API_KEY=abc123 --secret
  $ ggt var delete --all --force
  $ ggt var import --from=staging --all
"
`;

exports[`root > when var is given > prints the usage when -h is passed 1`] = `
"Manage environment variables

USAGE
  ggt var <command> [flags]

COMMANDS
  list      List all environment variables
  get       Get the value of an environment variable
  set       Set one or more environment variables
  delete    Delete one or more environment variables
  import    Import environment variables from another environment or file

FLAGS
  -a, --app <name>         Select the application
  -e, --env <environment>  Select the environment

EXAMPLES
  $ ggt var list --app=my-app --env=development
  $ ggt var set API_KEY=abc123 --secret
  $ ggt var delete --all --force
  $ ggt var import --from=staging --all

Run "ggt var --help" for more information.
"
`;

exports[`root > when version is given > prints the usage when --help is passed 1`] = `
"Print this version of ggt

USAGE
  ggt version

EXAMPLES
  $ ggt version

UPDATING GGT
  When there is a new release of ggt, running ggt will show you a message letting you
  know that an update is available.
"
`;

exports[`root > when version is given > prints the usage when -h is passed 1`] = `
"Print this version of ggt

USAGE
  ggt version

EXAMPLES
  $ ggt version

Run "ggt version --help" for more information.
"
`;

exports[`root > when whoami is given > prints the usage when --help is passed 1`] = `
"Print the name and email of the logged-in user

USAGE
  ggt whoami

EXAMPLES
  $ ggt whoami
"
`;

exports[`root > when whoami is given > prints the usage when -h is passed 1`] = `
"Print the name and email of the logged-in user

USAGE
  ggt whoami

EXAMPLES
  $ ggt whoami

Run "ggt whoami --help" for more information.
"
`;
